--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>Practica Kit</title>
     <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
     <link rel="stylesheet" href="%sveltekit.assets%/app.css" />
+    <link rel="stylesheet" href="/src/app.css">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     %sveltekit.head%
